<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/backgroundImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@drawable/login__newbg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:orientation="vertical"
        android:padding="@dimen/dp_34">

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/userNameEditText"
                style="@style/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_cancel"
                android:drawablePadding="@dimen/dp_8"
                android:drawableStart="@drawable/ic_user"
                android:hint="@string/username" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/passwordEditText"
                style="@style/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:drawablePadding="@dimen/dp_8"
                android:drawableStart="@drawable/ic_locker_white"
                android:hint="@string/password"
                android:imeOptions="actionGo"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/savePasswordCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                app:buttonTint="@color/white" />

            <com.views.TextViewLight
                style="@style/mediumWhiteText"
                android:layout_gravity="center_vertical"
                android:text="@string/remember_me" />
        </LinearLayout>

        <com.views.ButtonBold
            android:id="@+id/loginButton"
            style="@style/loginButton"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_24"
            android:text="@string/login" />

        <com.views.TextViewRegular
            android:id="@+id/forgetPasswordTextView"
            style="@style/mediumWhiteText"
            android:layout_marginTop="@dimen/dp_16"
            android:visibility="invisible"
            android:text="@string/forget_password" />
    </LinearLayout>
</FrameLayout>
