<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dp_16">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_12"
        android:background="@drawable/background_shape_white_corners_shadow"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/dp_8"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:id="@+id/startMarkerImageView"
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:alpha="0.3"
                android:contentDescription="@string/add"
                android:src="@drawable/ic_marker_red" />

            <View
                android:id="@+id/dividerView"
                android:layout_width="@dimen/dp_1"
                android:layout_height="@dimen/dp_55"
                android:layout_gravity="center_horizontal"
                android:alpha="0.3"
                android:background="@color/colorPrimary" />

            <ImageView
                android:id="@+id/endMarkerImageView"
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:alpha="0.3"
                android:contentDescription="@string/add"
                android:src="@drawable/ic_marker_primary" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/addressLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_4"
            android:layout_toEndOf="@+id/linearLayout"
            android:layout_toStartOf="@+id/routeInfoLayout"
            android:orientation="vertical"
            android:visibility="gone">

            <com.views.TextViewRegular
                android:id="@+id/governorateFromTextView"
                style="@style/mediumGrayText"
                android:alpha="0.3"
                android:text="@string/start_point_address" />

            <com.views.TextViewLight
                android:id="@+id/streetFromTextView"
                style="@style/smallGrayText"
                android:alpha="0.3"
                android:maxLines="2"
                android:text="@string/street" />

            <com.views.TextViewRegular
                android:id="@+id/governorateToTextView"
                style="@style/mediumGrayText"
                android:alpha="0.3"
                android:text="@string/end_point_address" />

            <com.views.TextViewLight
                android:id="@+id/streetToTextView"
                style="@style/smallGrayText"
                android:alpha="0.3"
                android:maxLines="2"
                android:text="@string/street" />

        </LinearLayout>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/listOfLocationsRecyclerView"
            android:layout_width="0dp"
            android:layout_gravity="center"
            android:layout_height="@dimen/dp_100"
            android:layout_weight="1" />


        <LinearLayout
            android:id="@+id/routeInfoLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/dp_8"
            android:orientation="horizontal"
            tools:visibility="visible">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_90"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <View
                    android:layout_width="@dimen/dp_8"
                    android:layout_height="@dimen/dp_1"
                    android:layout_gravity="start"
                    android:background="@color/gray_light" />

                <View
                    android:layout_width="@dimen/dp_1"
                    android:layout_height="@dimen/dp_65"
                    android:layout_gravity="start"
                    android:background="@color/gray_light" />

                <View
                    android:layout_width="@dimen/dp_8"
                    android:layout_height="@dimen/dp_1"
                    android:layout_gravity="start"
                    android:background="@color/gray_light" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_8"
                android:orientation="vertical">

                <com.views.TextViewRegular
                    android:id="@+id/distanceTextView"
                    style="@style/mediumGrayText"
                    android:layout_gravity="center"
                    android:text="@string/_0_00_km" />

                <com.views.TextViewRegular
                    android:id="@+id/durationTextView"
                    style="@style/smallGrayText"
                    android:layout_gravity="center"
                    android:text="@string/_0_00_min" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <ImageView
        android:id="@+id/cancelImageView"
        android:layout_width="@dimen/dp_32"
        android:layout_height="@dimen/dp_32"
        android:layout_gravity="end|top"
        android:contentDescription="@string/cancel"
        android:src="@drawable/ic_cancel_primary" />

</FrameLayout>