<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:id="@+id/dividerView"
            android:layout_width="@dimen/dp_1"
            android:layout_height="@dimen/dp_60"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimary" />

        <ImageView
            android:id="@+id/markerImageView"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_8"
            android:contentDescription="@string/add"
            android:src="@drawable/ic_marker_primary" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/addressLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_4"
        android:orientation="vertical">


        <com.views.TextViewRegular
            android:id="@+id/goTextView"
            android:ellipsize="end"
            android:maxLines="1"
            style="@style/mediumGrayText"
            android:text="@string/end_point_address" />

        <com.views.TextViewLight
            android:id="@+id/streetTextView"
            style="@style/smallGrayText"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/street" />
        <com.views.TextViewLight
            android:id="@+id/distanceTextView"
            style="@style/smallGrayText"
             android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/street" />
    </LinearLayout>
</LinearLayout>